--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -2,15 +2,31 @@
     margin: 0 auto;
     max-width: 1400px;
 
+    .search-tab {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .pagination {
+        text-align: center;
+    }
+
     .cards {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
         flex-wrap: wrap;
+    }
+
+    .card-wrap {
+        margin: 10px;
     }
     .card {
         display: flex;
 
-        width: 700px;
-        height: 300px;
+        width: 600px;
+        height: auto;
 
         &-image {
             img {
@@ -26,6 +42,7 @@
                 display: flex;
                 justify-content: space-between;
             }
+            
             &__rating-circle {
                 width: 50px;
                 height: 50px;
@@ -35,6 +52,12 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+            }
+
+            &__date-genre {
+                div {
+                    margin-bottom: 5px;
+                }
             }
         }
     }
