--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -20,17 +20,28 @@
     &__header {
       display: flex;
       justify-content: space-between;
+
+      &_title {
+        width: 250px;
+      }
     }
 
     &__rating-circle {
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      border: 5px yellow solid;
-
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+    .red {
+      border: 5px red solid;
+    }
+    .yellow {
+      border: 5px yellow solid;
+    }
+    .green {
+      border: 5px green solid;
     }
 
     &__date-genre {
