--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,9 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  background-color: #d6dbdd;
+  background: rgb(8,0,138);
+  background: radial-gradient(circle, rgba(8,0,138,1) 0%, rgba(217,217,255,1) 0%, rgba(83,225,254,1) 100%);
 }
-
-
