--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -3,64 +3,56 @@
 }
 .card {
   display: flex;
-
-  width: 600px;
-  height: 450px;
-
+  width: 35rem;
+  height: 28rem;
   color: #0d0952;
 
   &-image {
-    img {
-      width: 250px;
+    &__poster {
+      width: 15.6rem;
     }
   }
-
   &-info {
-    width: 450px;
-    padding: 15px;
+    width: 28rem;
+    padding: 1rem;
 
     &__header {
       display: flex;
       justify-content: space-between;
 
       &_title {
-        width: 250px;
+        width: 15rem;
       }
     }
-
     &__rating-circle {
-      width: 50px;
-      height: 50px;
+      width: 3.1rem;
+      height: 3.1rem;
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
     .low {
-      border: 5px #e90000 solid;
+      border: 0.3rem #e90000 solid;
     }
     .medium {
-      border: 5px #e97e00 solid;
+      border: 0.3rem #e97e00 solid;
     }
     .good {
-      border: 5px #e9d100 solid;
+      border: 0.3rem #e9d100 solid;
     }
     .great {
-      border: 5px #66e900 solid;
+      border: 0.3rem #66e900 solid;
     }
-
-    &__date-genres {
-      div {
-        margin-bottom: 5px;
-      }
+    &__date,
+    &__genres {
+      margin-bottom: 0.3rem;
     }
-
     &__genres {
       display: flex;
       justify-content: flex-start;
       padding: 0.15rem 0;
     }
-
     &__genre {
       margin-right: 0.2rem;
       padding: 0.35rem;
