--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,65 +1,73 @@
 .card-wrap {
-  margin: 10px;
-}
-.card {
-  display: flex;
-  width: 35rem;
-  height: 28rem;
-  color: #0d0952;
+  padding: 0.5rem;
+  
+  .card {
+    display: flex;
+    height: 29rem;
+    color: #0d0952;
 
-  &-image {
-    &__poster {
-      width: 15.6rem;
-    }
-  }
-  &-info {
-    width: 28rem;
-    padding: 1rem;
-
-    &__header {
-      display: flex;
-      justify-content: space-between;
-
-      &_title {
-        width: 15rem;
+    &-image {
+      &__poster {
+        max-width: 15.6rem;
       }
     }
-    &__rating-circle {
-      width: 3.1rem;
-      height: 3.1rem;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .low {
-      border: 0.3rem #e90000 solid;
-    }
-    .medium {
-      border: 0.3rem #e97e00 solid;
-    }
-    .good {
-      border: 0.3rem #e9d100 solid;
-    }
-    .great {
-      border: 0.3rem #66e900 solid;
-    }
-    &__date,
-    &__genres {
-      margin-bottom: 0.3rem;
-    }
-    &__genres {
-      display: flex;
-      justify-content: flex-start;
-      padding: 0.15rem 0;
-    }
-    &__genre {
-      margin-right: 0.2rem;
-      padding: 0.35rem;
-      font-size: 0.6rem;
+    &-info {
+      max-width: 28rem;
+      padding: 0 1rem;
 
-      border: 0.05rem #08008a solid;
-      background-color: #53e1fe;
+      &__header {
+        display: flex;
+        justify-content: space-between;
+
+        &_title {
+          width: 15rem;
+        }
+      }
+      &__rating-circle {
+        width: 3.1rem;
+        height: 3.1rem;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .low {
+        border: 0.3rem #e90000 solid;
+      }
+      .medium {
+        border: 0.3rem #e97e00 solid;
+      }
+      .good {
+        border: 0.3rem #e9d100 solid;
+      }
+      .great {
+        border: 0.3rem #66e900 solid;
+      }
+      &__date,
+      &__genres {
+        margin-bottom: 0.3rem;
+      }
+      &__genres {
+        display: flex;
+        justify-content: flex-start;
+        padding: 0.15rem 0;
+      }
+      &__genre {
+        margin-right: 0.2rem;
+        padding: 0.35rem;
+        font-size: 0.6rem;
+
+        border: 0.05rem #08008a solid;
+        background-color: #53e1fe;
+      }
+      &__rating-choose {
+        margin-bottom: 0.5rem;
+      }
     }
+  }
+}
+
+@media (max-width: 1310px) {
+  .card {
   }
 }
